Add ul-base config

--- a/ul/_posts/2011-08-31-Welsh-3000ers.md
+++ b/ul/_posts/2011-08-31-Welsh-3000ers.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: ul-post
 title: Welsh 3000'ers
 category: Trips
 banner: /img/2011/Welsh-3000ers/sunny.jpg
@@ -7,7 +7,7 @@ banner: /img/2011/Welsh-3000ers/sunny.jpg
 
 This July I went to North Wales with my university climbing club and spent a few days hiking, I decided to try and bag all 16 mountains in Wales over 3000 feet (the 3000'ers). The 3000'ers can be done in 24 hours, but I wanted to do a few days hiking and see a bit more of Snowdonia, so I spent 4 days doing it.
 
-![Nice view]({{ site.baseurl }}/img/2011/Welsh-3000ers/sunny.jpg)
+![Nice view]({{ site.ul-base }}/img/2011/Welsh-3000ers/sunny.jpg)
 
 I was trying out some home-made gear for the first time, a newly made rucksack and tarp. Both items worked out fine, but as always could do with some tweaking.
 	
@@ -18,27 +18,27 @@ Trip Report
 
 I left at around midday, the weather was cloudy and the forecast promised lots of rain but I knew the next days would be nice. I didn’t have a proper route plan but I did know which peaks I wanted to climb and in what order, the first was Yr Wyddfa. I headed up the rangers path eating lunch at the bottom getting absolutely soaked by the rain. As I got higher visibility reduced and the path became more of a river. I reached the join with the tourist path and headed for the top. My plan was to proceed to Crib y Dysgl and Crib Goch, I was a bit worried about walking the ridge in low visibility and the wet but proceeded anyway. Surprisingly I met another person on the ridge, we both thought we would be the only ones mad enough to be there.
 
-![Fog lifting on crib goch]({{site.baseurl}}/img/2011/Welsh-3000ers/clearing.jpg)
+![Fog lifting on crib goch]({{site.ul-base}}/img/2011/Welsh-3000ers/clearing.jpg)
 
 It started to clear up and stopped raining as I came off the ridge, it was getting late around this time and I decided where I would camp. I headed half way down Llanberris pass, and camped up on the North side of the pass. It rained a little during the night but not much.
 
-![A-frame setup]({{ site.baseurl }}/img/2011/Welsh-3000ers/aframe.jpg)
+![A-frame setup]({{ site.ul-base }}/img/2011/Welsh-3000ers/aframe.jpg)
 
 ### Day 2 (25.54 km) ###
 
 I didn’t wake up particularly early, I’ve become immune to daylight waking me up. I followed the river upstream, accidentally avoiding the path for most of it, hopping a fence and crossing the water. I went up Y Garn then quickly round to Elidir Fawr where I met a couple who where practising for the Welsh 3000ers Challenge they where interested that I go solo and pack so light. I decided to go off the path for a while to avoid backtracking, I spent most of this day off tracks and went quite slowly because of it. My original aim for the day was to reach Foel Fras, leaving me to visit the remaining peaks over the next day or two. My plan kept alternating between reaching Foel Fras and Carnedd Gwenllian. In the end I reach Carnedd Gwenllian with enough time to pop to Foel Fras, get back and Camp at Gwenllian. I pitched my tarp in a half pyramid to stop the strong winds, the wind was still getting under my quilt and making me quite cold. I regret skimping so much when making my quilt.
 
-![Half pyramid setup]({{ site.baseurl }}/img/2011/Welsh-3000ers/halfmid.jpg)
+![Half pyramid setup]({{ site.ul-base }}/img/2011/Welsh-3000ers/halfmid.jpg)
 
 ### Day 3 (32.08 km) ###
 
 It was very foggy so visibility was very low. The next morning navigating to Foel Grach and Llywelyn was easy as the path is so well worn but getting to Yr Elen was initially a bit harder until I found a well used path. 
 
-![Foggy view]({{ site.baseurl }}/img/2011/Welsh-3000ers/foggy.jpg)
+![Foggy view]({{ site.ul-base }}/img/2011/Welsh-3000ers/foggy.jpg)
 
 I made quick progress along the remaining Carneddau down to the foot of Tryfan. As I began ascending Tryfan I discovered that some of my climbing club where climbing on the east side, I had lunch with them while they started their climbs. I’m not sure if there is a main route up Tryfan but I just generally scrambled up.
 
-![View of tryfan]({{ site.baseurl }}/img/2011/Welsh-3000ers/tryfan.jpg)
+![View of tryfan]({{ site.ul-base }}/img/2011/Welsh-3000ers/tryfan.jpg)
 
 I wasn’t brave enough to attempt the jump from Adam and Eve, maybe next time. I had spent quite a while on Tryfan and tried to move quicker to get back that day. I made good progress past the Glyderau. I went back down to Llanberis Pass, passing the point I camped on day 1. I followed the road down to Llyn Peris and walked over the hill to the next valley, I was starting to slow down, my feet where really hurting. I didn’t make it to the hut and decided I would just camp in Beddgelert Forest and walk the remainder in the morning.
 
