Paginate index page
* Use Jekyll's excerpt feature

--- a/ul/_posts/2011-08-31-Welsh-3000ers.md
+++ b/ul/_posts/2011-08-31-Welsh-3000ers.md
@@ -8,6 +8,8 @@ This July I went to North Wales with my university climbing club and spent a few
 
 ![Nice view]({{ site.ul-base }}/img/2011/Welsh-3000ers/sunny.jpg)
 
+<!--more-->
+
 I was trying out some home-made gear for the first time, a newly made rucksack and tarp. Both items worked out fine, but as always could do with some tweaking.
 	
 Trip Report
